WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53216
[GTK] Pixel dumps do not include scrollbars in output images
https://bugs.webkit.org/show_bug.cgi?id=53216
Summary
[GTK] Pixel dumps do not include scrollbars in output images
Martin Robinson
Reported
2011-01-26 17:38:12 PST
Images dumped from tests which include scrollbars do not include those scrollbars in their output image. You can observe this by looking at some of the tests in the css2.1 directory.
Attachments
Patch
(485.24 KB, patch)
2011-01-26 18:38 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-01-26 18:38:50 PST
Created
attachment 80287
[details]
Patch
Xan Lopez
Comment 2
2011-01-26 18:43:18 PST
Comment on
attachment 80287
[details]
Patch OK, we always have to be special don't we!
Martin Robinson
Comment 3
2011-01-26 18:50:25 PST
Committed
r76749
: <
http://trac.webkit.org/changeset/76749
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug