2011-01-26  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Pixel dumps do not include scrollbars in output images
        https://bugs.webkit.org/show_bug.cgi?id=53216

        Update expected results which should show scrollbars.

        * platform/gtk/css2.1/t0803-c5502-mrgn-r-02-c-expected.checksum:
        * platform/gtk/css2.1/t0803-c5502-mrgn-r-02-c-expected.png:
        * platform/gtk/css2.1/t0803-c5505-mrgn-02-c-expected.checksum:
        * platform/gtk/css2.1/t0803-c5505-mrgn-02-c-expected.png:
        * platform/gtk/css2.1/t080301-c411-vt-mrgn-00-b-expected.checksum:
        * platform/gtk/css2.1/t080301-c411-vt-mrgn-00-b-expected.png:
        * platform/gtk/css2.1/t0905-c5525-fltclr-00-c-ag-expected.checksum:
        * platform/gtk/css2.1/t0905-c5525-fltclr-00-c-ag-expected.png:
        * platform/gtk/css2.1/t0905-c5525-fltmrgn-00-c-ag-expected.checksum:
        * platform/gtk/css2.1/t0905-c5525-fltmrgn-00-c-ag-expected.png:
        * platform/gtk/css2.1/t0905-c5525-fltwidth-00-c-g-expected.checksum:
        * platform/gtk/css2.1/t0905-c5525-fltwidth-00-c-g-expected.png:
        * platform/gtk/css2.1/t0905-c5526-fltclr-00-c-ag-expected.checksum:
        * platform/gtk/css2.1/t0905-c5526-fltclr-00-c-ag-expected.png:
        * platform/gtk/css2.1/t1002-c5523-width-02-b-g-expected.checksum:
        * platform/gtk/css2.1/t1002-c5523-width-02-b-g-expected.png:
        * platform/gtk/css2.1/t1202-counters-08-b-expected.checksum:
        * platform/gtk/css2.1/t1202-counters-08-b-expected.png:
        * platform/gtk/css2.1/t1202-counters-09-b-expected.checksum:
        * platform/gtk/css2.1/t1202-counters-09-b-expected.png:
        * platform/gtk/css2.1/t140201-c535-bg-fixd-00-b-g-expected.checksum:
        * platform/gtk/css2.1/t140201-c535-bg-fixd-00-b-g-expected.png:
        * platform/gtk/css2.1/t140201-c537-bgfxps-00-c-ag-expected.checksum:
        * platform/gtk/css2.1/t140201-c537-bgfxps-00-c-ag-expected.png:
        * platform/gtk/css2.1/t1508-c527-font-07-b-expected.checksum:
        * platform/gtk/css2.1/t1508-c527-font-07-b-expected.png:
2011-01-26  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Pixel dumps do not include scrollbars in output images
        https://bugs.webkit.org/show_bug.cgi?id=53216

        Show scrollbars in pixel dumps. This will fix pixel dumps for tests
        that have scrollbars.

        * DumpRenderTree/gtk/PixelDumpSupportGtk.cpp:
        (createBitmapContextFromWebView): Take the snapshot of the containing GtkScrolledWindow
        instead of the web view itself.

Canonical link: https://commits.webkit.org/66967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76749 268f45cc-cd09-0410-ab3c-d52691b4dbfc